hphp/hack/test/typecheck/coeffects/closures_explicit.php.exp
File "closures_explicit.php", line 12, characters 5-22:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "closures_explicit.php", line 11, characters 24-25:
  From this declaration, the context of this function body provides the capability set {}
  File "closures_explicit.php", line 7, characters 24-36:
  But the function being called requires the capability set {NonDet, Rx, WriteProperty}
File "closures_explicit.php", line 13, characters 5-16:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "closures_explicit.php", line 11, characters 24-25:
  From this declaration, the context of this function body provides the capability set {}
  File "closures_explicit.php", line 6, characters 23-24:
  But the function being called requires the capability set {Rx, WriteProperty}
File "closures_explicit.php", line 19, characters 5-22:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "closures_explicit.php", line 16, characters 28-29:
  From this declaration, the context of this function body provides the capability set {Rx, WriteProperty}
  File "closures_explicit.php", line 7, characters 24-36:
  But the function being called requires the capability set {NonDet, Rx, WriteProperty}
File "closures_explicit.php", line 25, characters 14-39:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "closures_explicit.php", line 25, characters 6-7:
  From this declaration, the context of this function body provides the capability set {Rx, WriteProperty}
  File "closures_explicit.php", line 23, characters 37-43:
  But the function being called requires the capability NonDet
File "closures_explicit.php", line 38, characters 7-25:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "closures_explicit.php", line 35, characters 19-20:
  From this declaration, the context of this function body provides the capability set {Rx, WriteProperty}
  File "closures_explicit.php", line 31, characters 26-32:
  But the function being called requires the capability NonDet
File "closures_explicit.php", line 41, characters 7-18:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "closures_explicit.php", line 40, characters 7-8:
  From this declaration, the context of this function body provides the capability set {}
  File "closures_explicit.php", line 29, characters 19-20:
  But the function being called requires the capability set {Rx, WriteProperty}
File "closures_explicit.php", line 42, characters 7-16:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "closures_explicit.php", line 40, characters 7-8:
  From this declaration, the context of this function body provides the capability set {}
  File "closures_explicit.php", line 35, characters 19-20:
  But the function being called requires the capability set {Rx, WriteProperty}
File "closures_explicit.php", line 47, characters 7-25:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "closures_explicit.php", line 40, characters 7-8:
  From this declaration, the context of this function body provides the capability set {}
  File "closures_explicit.php", line 31, characters 26-32:
  But the function being called requires the capability NonDet
